--- a/css/st.css
+++ b/css/st.css
@@ -1,9 +1,7 @@
 *{
     padding:0;
     margin:0;
-    overflow: hidden;
 }
-
 body {
     font-family: "Lato", sans-serif;
 }
@@ -13,9 +11,7 @@ body {
 }
 .compose {
     width:148px;
-    border-radius: 25%;
-    
-
+    border-radius: 25%;    
 }
 
 .main-container{
@@ -24,7 +20,6 @@ body {
 .head-container{
     display:flex;
 	direction:row;
-
 }
 .left-head{
     float: left;
@@ -41,7 +36,7 @@ body {
 }
 .middle-head{
     float: left;
-	width:50%;
+	width:62%;
     position:relative;
     padding-right:30px;
     margin-top:10px;
@@ -49,7 +44,7 @@ body {
 }
 .search-btn{
     padding:15px 20px 15px 60px ;
-    width:96%;
+    width:85%;
     font-size: 15px;
     border: none;
     border-radius: 10px;
@@ -59,14 +54,14 @@ body {
 }
 .search-icon{
     width:20px;
-    top:20px;
+    top:10px;
     left:20px;
     position:relative;
 }
 .show-opt{
     width:20px;
-    top:20px;
-    right:60px;
+    top:15px;
+    right:130px;
     position:absolute;
 }
 .right-head{
@@ -77,12 +72,12 @@ body {
     top:0px;
     position: fixed;
     margin-left:20px;
+    padding-right: 10px;
 }
 .right-pics{
     width:20px;
-    margin-left:30px;
+    margin-left:20px;
     margin-top:20px;
-
 }
 .right{
     float:right;
@@ -95,9 +90,6 @@ body {
 .msg-head{
     padding-right: 250px;
 }
-.search-itm{
-    background-color: rgb(119, 154, 184);
-}
 .search-btn:focus{
     background-color: white;
     border:none;
@@ -107,7 +99,6 @@ body {
 .search-btn:hover{
     border:none;
 }
-
 .more{
     width:10px;
     margin-left: 8px;
@@ -154,9 +145,12 @@ a{
     padding-right: 10px;
 }
 .heading{
-    padding-left:10px;
+    padding-left:5px;
     font-size: 15px;
+    position: fixed;
+    width:30%;
 }
+
 .primary ,.social ,.promotion{
     border-bottom:1px transparent grey;
     float:left;
@@ -167,11 +161,12 @@ a{
     background-color: white;
 }
 .primary{
-    background-image: url("back/inboxblack.png");
     background-repeat: no-repeat;
     background-position: 8% center;
-    border:none;
-
+    background-image: url("back/inbox.png");
+    color:red;
+    border: none;
+    border-bottom: 4px solid red;
 }
 .social{
     background-image: url("back/socia-black.png");
@@ -202,19 +197,9 @@ a{
     background-image: url("back/inbox.png");
     color:red;
     border-bottom: 4px solid red;
-
 }
 .primary a:focus{
     color:red;
-}
-
-.leftbar{
-    padding:0;
-    height:100%;
-    width: 250px;
-    position: fixed;
-    overflow-x: hidden;
-    overflow-y: hidden;  
 }
 
 .sidebar {
@@ -244,26 +229,35 @@ a{
     border: 1px solid black;
     border-radius: 40px;
     width:30px;
+
 }
-.sidebar  button, .meeting  button{
+.arrows-key{
+    margin-left: 5px;
+}
+.sidebar .inbox-red{
+    background-color: rgb(252, 216, 216);
+    color: red;
+}
+.sidebar  .navbutton, .meeting  .navbutton{
     text-decoration: none;
     font-size: 15px;
-    color: black;
     width: 95%;
     padding:6px 40px 6px 12px;
     text-align: left;
     vertical-align:middle;
     border: none;
-    background-color: white;
     border-bottom-right-radius: 23px;
     border-top-right-radius: 23px;
 }
-.sidebar button:hover ,.meeting  button:hover{
-   background-color: #f8f8f8;
+.black{
+    color: black;
+    background-color: white;
 }
-.sidebar .navbutton:focus{
-    background-color: #f2f2f1;
+.sidebar .black:hover ,.meeting  .black:hover{
+   background-color: #dfdddd;
+   border: none;
 }
+
 .material-icons {
     padding-right: 13px;
     padding-left: 13px;
@@ -283,10 +277,9 @@ a{
 }
 .msgdiv{
     float:left;
-    width:70%;
+    width:100%;
     vertical-align: middle;
     margin:10px;
-    background-image:url("images") ;
 }
 .sideimg{
     padding:0;
@@ -294,12 +287,13 @@ a{
     width:20px;
 }
 .middle{
-    width: 77%;
+    width: 78%;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    left:250px;
 }
-.sidebar.inbox{
-    background-color: rgb(248, 183, 183);
-    color: red;
-}
+
 .middlediv{
 border: 1px ridge rgb(253, 252, 252);
 vertical-align:top;
@@ -339,6 +333,7 @@ position:sticky;
 }
 .sections{
     margin-right: 250px;
+    width:100%;
 }
 .widgets-img{
     width:20px;
@@ -349,18 +344,30 @@ position:sticky;
     width:20px;
     float:right;
     margin-right:10px;
+    position:fixed;
+    right:0px;
 }
 .content-check{
     width:16px;
+    padding:0  10px;
 
 }
 .msg-content{
-    padding-left: 160px;
+    margin-left: 160px;
     font-size: 15px;
+    width:90%;
+}
+.time{
+    padding-left:100px;
+    float: right;
+    width:10%;
+    font:10px;
 }
 
   .msgdiv:hover{
-    border-bottom: 1px ridge grey;
+    box-shadow: 5px 5px 11px #dfdddd;
+
+    width:99%;
   }
   .bottom {
     position: absolute;
@@ -370,7 +377,4 @@ position:sticky;
   .bottom-img{
     width:15px;
     padding-right: 14px;
-  }
-  .mainmenu>div{
-    display: inline-block;
   }
